package org.jonasfroeller.model;

public class FuelType {
}
