export interface AmmunitionType {
  id: number;
  caliber: string;
  type: string;
}
