export interface StorageLocation {
  id: number;
  name: string;
  description: string;
}
