---
config:
  theme: forest
---
erDiagram
    storage_location {
        BIGINT id PK "GENERATED BY DEFAULT AS IDENTITY"
        VARCHAR name
        VARCHAR description
    }
    ammunition_type {
        BIGINT id PK "GENERATED BY DEFAULT AS IDENTITY"
        VARCHAR caliber
        VARCHAR type
    }
    weapon {
        BIGINT id PK "GENERATED BY DEFAULT AS IDENTITY"
        VARCHAR type
        VARCHAR model
        INT quantity
        BIGINT ammunition_type_id FK
        BIGINT storage_location_id FK
    }
    ammunition_stock {
        BIGINT id PK "GENERATED BY DEFAULT AS IDENTITY"
        BIGINT ammunition_type_id FK
        INT quantity
        BIGINT storage_location_id FK
    }
    drink {
        BIGINT id PK "GENERATED BY DEFAULT AS IDENTITY"
        VARCHAR type
        DOUBLE quantity
        DATE expiration_date
        BIGINT storage_location_id FK
    }
    food {
        BIGINT id PK "GENERATED BY DEFAULT AS IDENTITY"
        VARCHAR type
        DOUBLE quantity
        DATE expiration_date
        BIGINT storage_location_id FK
    }
    medication {
        BIGINT id PK "GENERATED BY DEFAULT AS IDENTITY"
        VARCHAR name
        INT quantity
        DATE expiration_date
        VARCHAR purpose
        BIGINT storage_location_id FK
    }
    fuel_type {
        BIGINT id PK "GENERATED BY DEFAULT AS IDENTITY"
        VARCHAR name
    }
    fuel {
        BIGINT id PK "GENERATED BY DEFAULT AS IDENTITY"
        BIGINT fuel_type_id FK
        DOUBLE quantity
        BIGINT storage_location_id FK
    }
    battery {
        BIGINT id PK "GENERATED BY DEFAULT AS IDENTITY"
        VARCHAR type
        DOUBLE capacity
        INT quantity
        BIGINT storage_location_id FK
    }
    generator {
        BIGINT id PK "GENERATED BY DEFAULT AS IDENTITY"
        VARCHAR type
        DOUBLE power
        BIGINT fuel_type_id FK
        VARCHAR status
        BIGINT storage_location_id FK
    }
    weapon ||--o{ ammunition_type : "uses"
    weapon ||--o{ storage_location : "stored at"
    ammunition_stock ||--o{ ammunition_type : "is for"
    ammunition_stock ||--o{ storage_location : "stored at"
    drink ||--o{ storage_location : "stored at"
    food ||--o{ storage_location : "stored at"
    medication ||--o{ storage_location : "stored at"
    fuel ||--o{ fuel_type : "is"
    fuel ||--o{ storage_location : "stored at"
    battery ||--o{ storage_location : "stored at"
    generator ||--o{ fuel_type : "runs on"
    generator ||--o{ storage_location : "stored at"
